dev-scripts/kubernetes/nacos/nacos/nacos-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nacos
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: nacos.od.com
      http:
        paths:
          - backend:
              service:
                name: naocs
                port:
                  name: nacos
                  number: 8848
